--- a/index.html
+++ b/index.html
@@ -1,1 +1,42 @@
-Hola
+<!DOCTYPE html>
+<html lang="es">
+	<head>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<title>Restaurant Web</title>
+		<meta name="description" content="A new restaurant webiste project." />
+		<meta name="author" content="Víctor Dorado" />
+
+		<link rel="stylesheet" href="css/style.css" />
+	</head>
+
+	<body>
+		<!-- The idea is to do something similar to this: https://makkila.com/-->
+
+		<!-- Navbar -->
+		<nav class="navbar">
+			<!-- LOGO -->
+			<div class="logo">RST</div>
+			<!-- NAVIGATION MENU -->
+			<ul class="nav-links">
+				<!-- NAVIGATION MENUS -->
+				<div class="menu">
+					<li><a href="/">Reservar</a></li>
+					<li><a href="/">Carta</a></li>
+					<li class="services">
+						<a href="/">Restaurantes</a>
+						<!-- DROPDOWN MENU -->
+						<ul class="dropdown">
+							<li><a href="/">Barcelona</a></li>
+							<li><a href="/">Madrid</a></li>
+							<li><a href="/">Londres</a></li>
+							<li><a href="/">Berlín</a></li>
+						</ul>
+					</li>
+					<li><a href="/">Contact</a></li>
+				</div>
+			</ul>
+		</nav>
+		<script src="js/scripts.js"></script>
+	</body>
+</html>
