Navbar done - no responsive

--- a/index.html
+++ b/index.html
@@ -12,31 +12,36 @@
 
 	<body>
 		<!-- The idea is to do something similar to this: https://makkila.com/-->
+		<section>
+			<!--Logo and Navbar -->
+			<header>
+				<nav>
+					<ul class="nav-links" id="centered_nav">
+						<!-- NAVIGATION MENUS -->
+						<li><a href="/">Reservar</a></li>
+						<li><a href="/">Carta</a></li>
 
-		<!-- Navbar -->
-		<nav class="navbar">
-			<!-- LOGO -->
-			<div class="logo">RST</div>
-			<!-- NAVIGATION MENU -->
-			<ul class="nav-links">
-				<!-- NAVIGATION MENUS -->
-				<div class="menu">
-					<li><a href="/">Reservar</a></li>
-					<li><a href="/">Carta</a></li>
-					<li class="services">
-						<a href="/">Restaurantes</a>
-						<!-- DROPDOWN MENU -->
-						<ul class="dropdown">
-							<li><a href="/">Barcelona</a></li>
-							<li><a href="/">Madrid</a></li>
-							<li><a href="/">Londres</a></li>
-							<li><a href="/">Berlín</a></li>
-						</ul>
-					</li>
-					<li><a href="/">Contact</a></li>
-				</div>
-			</ul>
-		</nav>
-		<script src="js/scripts.js"></script>
+						<div class="logo">
+							<img src="./img/logo.jpg" />
+						</div>
+						<li class="dropdown">
+							<button class="dropbtn">Restaurantes</button>
+							<!-- DROPDOWN MENU -->
+							<ul class="dropdown-content">
+								<li><a href="/">Barcelona</a></li>
+								<li><a href="/">Madrid</a></li>
+								<li><a href="/">Londres</a></li>
+								<li><a href="/">Berlín</a></li>
+							</ul>
+						</li>
+						<li><a href="/">Contact</a></li>
+					</ul>
+				</nav>
+			</header>
+		</section>
+		<section id="principal">
+			<a href="">Hola</a>
+		</section>
 	</body>
+	<script src="js/script.js"></script>
 </html>
