Background and new sections

--- a/index.html
+++ b/index.html
@@ -39,8 +39,20 @@
 				</nav>
 			</header>
 		</section>
-		<section id="principal">
-			<a href="">Hola</a>
+		<section class="bkg">
+			<div id="principal">
+				<div class="main">
+					<h1>Restaurant OmeletteDev</h1>
+					<h2>Gastronomy inspired by developers.</h2>
+					<button>BOOK A TABLE</button>
+				</div>
+			</div>
+		</section>
+		<section>
+			<footer>
+				Website developed by
+				<p>: @vdfbiz7</p>
+			</footer>
 		</section>
 	</body>
 	<script src="js/script.js"></script>
