--- a/book.html
+++ b/book.html
@@ -22,7 +22,7 @@
 						<li><a href="menu.html">Carta</a></li>
 
 						<div class="logo">
-							<img src="./img/logo.jpg" onclick="location.href='index.html'" />
+							<img src="./img/logo.jpg" />
 						</div>
 						<li class="dropdown">
 							<button class="dropbtn">Restaurantes</button>
@@ -38,13 +38,7 @@
 			</header>
 		</section>
 		<section class="bkg">
-			<div id="principal">
-				<div class="main">
-					<h1>Restaurant OmeletteDev</h1>
-					<h2>Gastronomy inspired by developers.</h2>
-					<button onclick="location.href='book.html'">BOOK A TABLE</button>
-				</div>
-			</div>
+			<div id="principal"></div>
 		</section>
 		<section>
 			<footer>
