--- a/contact.html
+++ b/contact.html
@@ -38,13 +38,7 @@
 			</header>
 		</section>
 		<section class="bkg">
-			<div id="principal">
-				<div class="main">
-					<h1>Restaurant OmeletteDev</h1>
-					<h2>Gastronomy inspired by developers.</h2>
-					<button onclick="location.href='book.html'">BOOK A TABLE</button>
-				</div>
-			</div>
+			<div id="principal"></div>
 		</section>
 		<section>
 			<footer>
