Contact page finished

--- a/book.html
+++ b/book.html
@@ -22,7 +22,7 @@
 						<li><a href="menu.html">Carta</a></li>
 
 						<div class="logo">
-							<img src="./img/logo.jpg" />
+							<img src="./img/logo.jpg" onclick="location.href='index.html'" />
 						</div>
 						<li class="dropdown">
 							<button class="dropbtn">Restaurantes</button>
