--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,20 @@
 			</header>
 		</section>
 		<section class="bkg">
-			<div id="principal"></div>
+			<div id="principal">
+				<div class="main">
+					<h1>Restaurant OmeletteDev</h1>
+					<h2>Address: Omelette avenue 777, Barcelona</h2>
+					<h2>Telf. Num: +34 777777777</h2>
+					<h2>Email: contact@omelettedev.com</h2>
+					<h2>Timetable: From Monday to Friday from 9h to 18h.</h2>
+					<button
+						onclick="window.open('http://maps.google.com/maps?q=777+Omelette+avenue+Barcelona')"
+					>
+						¿How to arrive?
+					</button>
+				</div>
+			</div>
 		</section>
 		<section>
 			<footer>
