Book finished, no responsive

--- a/book.html
+++ b/book.html
@@ -38,7 +38,78 @@
 			</header>
 		</section>
 		<section class="bkg">
-			<div id="principal"></div>
+			<div id="principal">
+				<form method="post">
+					<div class="elem-group">
+						<label for="name">Your Name</label>
+						<input
+							type="text"
+							id="name"
+							name="visitor_name"
+							placeholder="John Doe"
+							pattern="[A-Z\sa-z]{3,20}"
+							required
+						/>
+					</div>
+					<div class="elem-group">
+						<label for="email">Your E-mail</label>
+						<input
+							type="email"
+							id="email"
+							name="visitor_email"
+							placeholder="john.doe@email.com"
+							required
+						/>
+					</div>
+					<div class="elem-group">
+						<label for="phone">Your Phone</label>
+						<input
+							type="tel"
+							id="phone"
+							name="visitor_phone"
+							placeholder="777-777-777"
+							pattern="(\d{3})-?\s?(\d{3})-?\s?(\d{4})"
+							required
+						/>
+					</div>
+					<hr />
+					<div class="elem-group">
+						<label for="adult">Number of people</label>
+						<input
+							type="number"
+							id="adult"
+							name="total_adults"
+							placeholder="2"
+							min="1"
+							required
+						/>
+					</div>
+					<div class="elem-group">
+						<label for="checkin-date">Date</label>
+						<input type="date" id="checkin-date" name="checkin" required />
+					</div>
+					<div class="elem-group">
+						<label for="room-selection">Select table Preference</label>
+						<select id="room-selection" name="room_preference" required>
+							<option value="inside">Inside</option>
+							<option value="outside">Outside</option>
+						</select>
+					</div>
+					<hr />
+					<div class="elem-group">
+						<label for="message">Anything Else?</label>
+						<textarea
+							id="message"
+							name="visitor_message"
+							placeholder="Tell us anything else that might be important."
+							required
+						></textarea>
+					</div>
+					<div class="formButton">
+						<button type="submit">Book the table</button>
+					</div>
+				</form>
+			</div>
 		</section>
 		<section>
 			<footer>
