Menu and cities finished

--- a/book.html
+++ b/book.html
@@ -89,22 +89,13 @@
 						<input type="date" id="checkin-date" name="checkin" required />
 					</div>
 					<div class="elem-group">
-						<label for="room-selection">Select table Preference</label>
+						<label for="room-selection">Select city</label>
 						<select id="room-selection" name="room_preference" required>
-							<option value="inside">Inside</option>
-							<option value="outside">Outside</option>
+							<option value="inside">Barcelona</option>
+							<option value="outside">Madrid</option>
 						</select>
 					</div>
 					<hr />
-					<div class="elem-group">
-						<label for="message">Anything Else?</label>
-						<textarea
-							id="message"
-							name="visitor_message"
-							placeholder="Tell us anything else that might be important."
-							required
-						></textarea>
-					</div>
 					<div class="formButton">
 						<button type="submit">Book the table</button>
 					</div>
